# neural_lightmaps

./: .gitattributes  .gitignore  NeuralSHCompute.usf  README.md  best_model.pth  formats.py  nn.ipynb  normalization_in_shader.txt  print_model.ipynb  pyproject.toml  texture_sampler.py  visualize.ipynb
LightmapsData/: AmbientVector.json  DirectionalLightShadowing.json  IndirectionTexture.json  SHCoefficients_3.json
